<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/hall_page_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_tuijian"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/tuijianrenId"
            android:lines="1"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/edittext_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/ed_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/dengluzhanghao"
            android:lines="1"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/edittext_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/zhanghaomiiabadaoshier"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/edittext_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <EditText
            android:id="@+id/ed_tpassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/querenmima"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/edittext_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg_login"
            android:text="@string/nextstp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhucedainiapyonghuxieyi"
                android:textColor="@color/black_de" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yonghuxieyi"
                android:textColor="#58d8ff" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>