<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/hall_page_background">

    <include layout="@layout/view_title_bar" />

    <ImageView
        android:id="@+id/iv_gen_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/gen_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_account_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/account_head"
        app:layout_constraintBottom_toTopOf="@id/iv_set_huakuang"
        app:layout_constraintEnd_toEndOf="@id/iv_set_huakuang"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang" />

    <ImageView
        android:id="@+id/iv_set_huakuang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/huakuang"
        app:layout_constraintBottom_toBottomOf="@id/iv_gen_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_gen_bg"
        app:layout_constraintStart_toStartOf="@id/iv_gen_bg"
        app:layout_constraintTop_toTopOf="@id/iv_gen_bg" />


    <LinearLayout
        android:id="@+id/ll_guanjianzi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:background="@mipmap/xuankuang"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang"
        app:layout_constraintTop_toTopOf="@id/iv_set_huakuang">

        <TextView
            android:id="@+id/tv_guanjianzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/guanjianzi"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mishu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:background="@mipmap/xuankuang"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang"
        app:layout_constraintTop_toBottomOf="@id/ll_guanjianzi">

        <TextView
            android:id="@+id/tv_mishu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/miyao"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pwd_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:background="@mipmap/xuankuang"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang"
        app:layout_constraintTop_toBottomOf="@id/ll_mishu">

        <TextView
            android:id="@+id/tv_pwd_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/jiaoyimima"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pwd_new_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:background="@mipmap/xuankuang"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang"
        app:layout_constraintTop_toBottomOf="@id/ll_pwd_new">

        <TextView
            android:id="@+id/tv_pwd_new_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/ageinjiaoyimia"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/sure_submit"
        app:layout_constraintBottom_toBottomOf="@+id/iv_set_huakuang"
        app:layout_constraintEnd_toEndOf="@id/iv_set_huakuang"
        app:layout_constraintStart_toStartOf="@id/iv_set_huakuang" />


</android.support.constraint.ConstraintLayout>